# Meeting-Notes

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_BRIEF.md  README.md  THIRD_PARTY_NOTICES.md  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.node.json  tsconfig.web.json  vite.web.config.ts  vitest.config.ts
docs/: api-contract.md  architecture.md  codex-guidelines.md  data-model.md  deployment-cloudflare-tunnel.md  live-engine-benchmark.md  (+4 more)
server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/app/: __init__.py  auth.py  config.py  errors.py  logging.py  main.py
server/app/benchmarks/: __init__.py  fixtures.py  live_engine_benchmark.py  metrics.py
server/app/jobs/: __init__.py  diarization.py  final_transcript.py  manager.py  models.py  speaker_mapper.py
server/app/live/: __init__.py  asr.py  audio_buffer.py  events.py  session.py  turn_builder.py  websocket.py
server/app/routes/: __init__.py  admin.py  engines.py  health.py  jobs.py  live.py  models.py
server/app/schemas/: health.py  jobs.py  storage.py
server/app/storage/: __init__.py  cleanup.py  manager.py  models.py
server/tests/: __init__.py  conftest.py  test_admin_storage.py  test_auth.py  test_diarization_fallback.py  test_final_job_auth.py  test_final_jobs.py  test_final_speaker_aware_transcript.py  test_health.py  test_live_benchmark_metrics.py  test_live_session.py  test_live_turn_events.py  test_live_websocket.py  test_speaker_turn_builder.py  test_storage_manager.py
(+112 files in other folders)
