[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-notes-asr-gateway"
version = "0.1.0"
description = "Ephemeral ASR Gateway foundation for Local Whisper Studio"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
live = [
  "faster-whisper>=1.1,<2",
  "numpy>=1.26,<3",
]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
